# phyolin

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  batchPhy.sh
R/: generateData.r
aml_patients/: Snakefile  config.yaml  discretize_counts.R  read_counts  sampleList.txt  sampleList_annotated.txt
aml_patients/.snakemake/metadata/: aW5wdXQvQU1MLTA1LTAwMS5sb2Np  aW5wdXQvQU1MLTA1LTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTA2LTAwMS5sb2Np  aW5wdXQvQU1MLTA3LTAwMS5sb2Np  aW5wdXQvQU1MLTA4LTAwMS5sb2Np  aW5wdXQvQU1MLTA4LTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTA5LTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTAxLTAwMS5sb2Np  aW5wdXQvQU1MLTAxLTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTAyLTAwMS5sb2Np  aW5wdXQvQU1MLTAyLTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTAzLTAwMV9pbnB1dC5jc3Y=  aW5wdXQvQU1MLTE0LTAwMS5sb2Np  (+711 more)
aml_patients/benchmark/: AML-01-001_0.001_phyolin.out  AML-01-001_0.01_phyolin.out  AML-01-001_0.0_phyolin.out  AML-02-001_0.001_phyolin.out  AML-02-001_0.01_phyolin.out  AML-02-001_0.0_phyolin.out  AML-03-001_0.001_phyolin.out  AML-03-001_0.01_phyolin.out  AML-03-001_0.0_phyolin.out  AML-05-001_0.001_phyolin.out  AML-05-001_0.01_phyolin.out  AML-05-001_0.0_phyolin.out  AML-06-001_0.001_phyolin.out  AML-06-001_0.01_phyolin.out  AML-06-001_0.0_phyolin.out  AML-07-001_0.001_phyolin.out  AML-07-001_0.01_phyolin.out  AML-07-001_0.0_phyolin.out  AML-08-001_0.001_phyolin.out  AML-08-001_0.01_phyolin.out  AML-08-001_0.0_phyolin.out  AML-09-001_0.001_phyolin.out  AML-09-001_0.01_phyolin.out  AML-09-001_0.0_phyolin.out  AML-10-001_0.001_phyolin.out  AML-10-001_0.01_phyolin.out  AML-10-001_0.0_phyolin.out  AML-100-001_0.001_phyolin.out  AML-100-001_0.01_phyolin.out  AML-100-001_0.0_phyolin.out  AML-101-001_0.001_phyolin.out  AML-101-001_0.01_phyolin.out  AML-101-001_0.0_phyolin.out  AML-11-001_0.001_phyolin.out  AML-11-001_0.01_phyolin.out  AML-11-001_0.0_phyolin.out  AML-116-001_0.001_phyolin.out  AML-116-001_0.01_phyolin.out  AML-116-001_0.0_phyolin.out  AML-12-001_0.001_phyolin.out  (+257 more)
aml_patients/input/: AML-01-001.loci  AML-01-001_input.csv  AML-02-001.loci  AML-02-001_input.csv  AML-03-001.loci  AML-03-001_input.csv  AML-05-001.loci  AML-05-001_input.csv  AML-06-001.loci  AML-06-001_input.csv  AML-07-001.loci  AML-07-001_input.csv  AML-08-001_input.csv  AML-09-001.loci  AML-09-001_input.csv  AML-10-001.loci  AML-10-001_input.csv  AML-100-001.loci  AML-100-001_input.csv  AML-101-001.loci  AML-101-001_input.csv  AML-11-001.loci  AML-11-001_input.csv  AML-116-001.loci  AML-116-001_input.csv  AML-12-001.loci  AML-12-001_input.csv  AML-13-001.loci  AML-13-001_input.csv  AML-14-001.loci  AML-14-001_input.csv  AML-15-001.loci  AML-15-001_input.csv  AML-16-001.loci  AML-16-001_input.csv  AML-17-001.loci  AML-17-001_input.csv  AML-18-001.loci  AML-18-001_input.csv  AML-19-001.loci  (+157 more)
aml_patients/phyolin_estimate/: AML-01-001_fp0.001_predict.out  AML-01-001_fp0.01_predict.out  AML-01-001_fp0.0_predict.out  AML-02-001_fp0.001_predict.out  AML-02-001_fp0.01_predict.out  AML-02-001_fp0.0_predict.out  AML-03-001_fp0.001_predict.out  AML-03-001_fp0.01_predict.out  AML-03-001_fp0.0_predict.out  AML-05-001_fp0.001_predict.out  AML-05-001_fp0.01_predict.out  AML-05-001_fp0.0_predict.out  AML-06-001_fp0.001_predict.out  AML-06-001_fp0.01_predict.out  AML-06-001_fp0.0_predict.out  AML-07-001_fp0.001_predict.out  AML-07-001_fp0.01_predict.out  AML-07-001_fp0.0_predict.out  AML-08-001_fp0.001_predict.out  AML-08-001_fp0.01_predict.out  AML-08-001_fp0.0_predict.out  AML-09-001_fp0.001_predict.out  AML-09-001_fp0.01_predict.out  AML-09-001_fp0.0_predict.out  AML-10-001_fp0.001_predict.out  AML-10-001_fp0.01_predict.out  AML-10-001_fp0.0_predict.out  AML-100-001_fp0.001_predict.out  AML-100-001_fp0.01_predict.out  AML-100-001_fp0.0_predict.out  AML-101-001_fp0.001_predict.out  AML-101-001_fp0.01_predict.out  AML-101-001_fp0.0_predict.out  AML-11-001_fp0.001_predict.out  AML-11-001_fp0.01_predict.out  AML-11-001_fp0.0_predict.out  AML-116-001_fp0.001_predict.out  AML-116-001_fp0.01_predict.out  AML-116-001_fp0.0_predict.out  AML-12-001_fp0.001_predict.out  (+257 more)
aml_patients/phyolin_matrix_output/: AML-01-001_fp0.001_matrix.csv  AML-01-001_fp0.01_matrix.csv  AML-01-001_fp0.0_matrix.csv  AML-02-001_fp0.001_matrix.csv  AML-02-001_fp0.01_matrix.csv  AML-02-001_fp0.0_matrix.csv  AML-03-001_fp0.001_matrix.csv  AML-03-001_fp0.01_matrix.csv  AML-03-001_fp0.0_matrix.csv  AML-05-001_fp0.001_matrix.csv  AML-05-001_fp0.01_matrix.csv  AML-05-001_fp0.0_matrix.csv  AML-06-001_fp0.001_matrix.csv  AML-06-001_fp0.01_matrix.csv  AML-06-001_fp0.0_matrix.csv  AML-07-001_fp0.001_matrix.csv  AML-07-001_fp0.01_matrix.csv  AML-07-001_fp0.0_matrix.csv  AML-08-001_fp0.001_matrix.csv  AML-08-001_fp0.01_matrix.csv  AML-08-001_fp0.0_matrix.csv  AML-09-001_fp0.001_matrix.csv  AML-09-001_fp0.01_matrix.csv  AML-09-001_fp0.0_matrix.csv  AML-10-001_fp0.001_matrix.csv  AML-10-001_fp0.01_matrix.csv  AML-10-001_fp0.0_matrix.csv  AML-100-001_fp0.001_matrix.csv  AML-100-001_fp0.01_matrix.csv  AML-100-001_fp0.0_matrix.csv  AML-101-001_fp0.001_matrix.csv  AML-101-001_fp0.01_matrix.csv  AML-101-001_fp0.0_matrix.csv  AML-11-001_fp0.001_matrix.csv  AML-11-001_fp0.01_matrix.csv  AML-11-001_fp0.0_matrix.csv  AML-116-001_fp0.001_matrix.csv  AML-116-001_fp0.01_matrix.csv  AML-116-001_fp0.0_matrix.csv  AML-12-001_fp0.001_matrix.csv  (+257 more)
data/: test.out  test_data.csv  test_data_small.csv  test_data_small_out.csv
data/real_data/: Patient2_log.txt  Patient2_raw_scs.txt  Patient6_rates.txt  runtimes6.txt
data/sim2/: dlPredict.txt  runtimes.txt
data/sim3/: dlPredict.txt  runtimes.txt
data/sim4/: dlPredict.txt  runtimes.txt
data/sim5/: dlPredict.txt  runtimes.txt
data/sim6/: dlPredict.txt  runtimes.txt
data/sim7/: dlPredict.txt  runtimes.txt
data/simSCS/: Patient10_trees.txt  Patient2_trees.txt  Patient33_trees.txt  Patient58_trees.txt  Patient70_trees.txt  Patient74_trees.txt  Patient8_trees.txt
data/sim_data/: dlPredict.txt  runtimes.txt  sim_summary.csv
src/: bayesfactor.r  phyolin.py  phyolinCP.cpp  phyolinCP.h  prep_aml.py  prep_input.py  singlecellmatrix.cpp  singlecellmatrix.h
(+1266 files in other folders)
